--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidTuan2">
+        <activity
+            android:name=".Activity2c"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Activity2b">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +26,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activity2a">
-<!--            -->
+
+            <!--  -->
         </activity>
     </application>
 
